sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:15: error: not found: value -
      case (n-3,true) => echange(i,i)
             ^AlgGnomeSort:16: error: not found: value -
      case (n-3,false) => echange(i,i+1);
             ^